Project

General

Profile

Actions

Bug #19964

closed

occasional crushtool timeouts

Added by Sage Weil almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-05-16T23:14:47.384 INFO:tasks.workunit.client.0.smithi152.stderr:+ ceph osd pool create foooo 123
2017-05-16T23:14:52.988 INFO:tasks.workunit.client.0.smithi152.stderr:Error EINVAL: crushtool check failed with -22: crushtool: timed out (5 sec)

/a/sage-2017-05-16_22:22:40-rados-wip-sage-testing2---basic-smithi/1185918
Actions #1

Updated by Kefu Chai almost 7 years ago

this is not new, i've been spotting this occasionally in our jenkins run.

Actions #3

Updated by Sage Weil almost 7 years ago

/a/sage-2017-05-24_22:20:09-rados-wip-sage-testing---basic-smithi/1225182

Actions #4

Updated by Sage Weil almost 7 years ago

/a/sage-2017-05-27_01:05:11-rados-wip-sage-testing---basic-smithi/1233483

Actions #5

Updated by Sage Weil almost 7 years ago

/a/sage-2017-05-27_03:43:09-rados-wip-sage-testing2---basic-smithi/1235225

Actions #6

Updated by Sage Weil almost 7 years ago

/a/sage-2017-05-28_05:00:18-rados-wip-sage-testing---basic-smithi/1238511

description: rados/singleton-bluestore/{all/cephtool.yaml msgr-failures/few.yaml msgr/async.yaml
objectstore/bluestore.yaml rados.yaml}

Actions #7

Updated by Sage Weil almost 7 years ago

/a/sage-2017-06-01_02:27:12-rados-wip-sage-testing2---basic-smithi/1249759
description: rados/singleton-bluestore/{all/cephtool.yaml msgr-failures/few.yaml msgr/random.yaml
objectstore/bluestore-comp.yaml rados.yaml}

Actions #8

Updated by Sage Weil almost 7 years ago

/a/sage-2017-06-02_08:32:01-rados-wip-sage-testing-distro-basic-smithi/1255514
teuthology:1255514 03:14 PM $ cat summary.yaml
description: rados/singleton-bluestore/{all/cephtool.yaml msgr-failures/few.yaml msgr/simple.yaml
objectstore/bluestore-comp.yaml rados.yaml}

Actions #9

Updated by Greg Farnum almost 7 years ago

  • Project changed from Ceph to RADOS
Actions #10

Updated by Sage Weil almost 7 years ago

/a/sage-2017-06-26_14:37:54-rados-wip-sage-testing2-distro-basic-smithi/1327058
rados/thrash/{0-size-min-size-overrides/2-size-1-min-size.yaml 1-pg-log-overrides/short_pg_log.yaml backoff/normal.yaml ceph.yaml clusters/{fixed-2.yaml openstack.yaml} d-require-luminous/at-end.yaml msgr-failures/fastclose.yaml msgr/async.yaml objectstore/bluestore-comp.yaml rados.yaml rocksdb.yaml thrashers/none.yaml workloads/radosbench.yaml}

Actions #11

Updated by Sage Weil almost 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Sage Weil
Actions #12

Updated by Sage Weil almost 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #13

Updated by Sage Weil almost 7 years ago

  • Status changed from Fix Under Review to 7
Actions #14

Updated by Sage Weil almost 7 years ago

  • Status changed from 7 to Resolved
Actions

Also available in: Atom PDF